--- a/scrwebm_net3/reports/consultas/montosPendientes/report-excel.rdlc
+++ b/scrwebm_net3/reports/consultas/montosPendientes/report-excel.rdlc
@@ -1691,6 +1691,11 @@
       <Nullable>true</Nullable>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="resumen">
+      <DataType>Boolean</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -1716,6 +1721,11 @@
           <ColumnIndex>3</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>mostrarColores</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>0</ColumnIndex>
+          <RowIndex>1</RowIndex>
+          <ParameterName>resumen</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
