--- a/scrwebm_net3/reports/consultas/montosPendientes/report.rdlc
+++ b/scrwebm_net3/reports/consultas/montosPendientes/report.rdlc
@@ -721,57 +721,6 @@
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="monedaDescripcion">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value>=Fields!monedaDescripcion.Value</Value>
-                                  <Style>
-                                    <FontSize>8pt</FontSize>
-                                    <FontWeight>Bold</FontWeight>
-                                  </Style>
-                                </TextRun>
-                              </TextRuns>
-                              <Style>
-                                <TextAlign>Left</TextAlign>
-                              </Style>
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>monedaDescripcion</rd:DefaultName>
-                          <Style>
-                            <Border>
-                              <Color>LightGrey</Color>
-                              <Style>Solid</Style>
-                            </Border>
-                            <BackgroundColor>=IIf(Parameters!mostrarColores.Value, "LightGray", "Transparent")</BackgroundColor>
-                            <VerticalAlign>Middle</VerticalAlign>
-                            <PaddingLeft>14pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                        <ColSpan>9</ColSpan>
-                      </CellContents>
-                    </TablixCell>
-                    <TablixCell />
-                    <TablixCell />
-                    <TablixCell />
-                    <TablixCell />
-                    <TablixCell />
-                    <TablixCell />
-                    <TablixCell />
-                    <TablixCell />
-                  </TablixCells>
-                </TablixRow>
-                <TablixRow>
-                  <Height>0.25in</Height>
-                  <TablixCells>
-                    <TablixCell>
-                      <CellContents>
                         <Textbox Name="companiaNombre">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
@@ -779,7 +728,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!companiaNombre.Value</Value>
+                                  <Value>=Fields!monedaSimbolo.Value + " - " + Fields!companiaNombre.Value</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
@@ -825,6 +774,7 @@
                       <CellContents>
                         <Textbox Name="ramoDescripcion">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -876,6 +826,7 @@
                       <CellContents>
                         <Textbox Name="origen">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -912,6 +863,7 @@
                       <CellContents>
                         <Textbox Name="aseguradoAbreviatura">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -948,6 +900,7 @@
                       <CellContents>
                         <Textbox Name="suscriptorAbreviatura">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -985,6 +938,7 @@
                       <CellContents>
                         <Textbox Name="cuota_numero">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -1021,6 +975,7 @@
                       <CellContents>
                         <Textbox Name="cuota_fecha">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -1058,6 +1013,7 @@
                       <CellContents>
                         <Textbox Name="cuota_fechaVencimiento">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -1095,6 +1051,7 @@
                       <CellContents>
                         <Textbox Name="cuota_monto">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -1132,6 +1089,7 @@
                       <CellContents>
                         <Textbox Name="cantidadPagosParciales">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -1169,6 +1127,7 @@
                       <CellContents>
                         <Textbox Name="montoPendiente">
                           <CanGrow>true</CanGrow>
+                          <CanShrink>true</CanShrink>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
@@ -1374,7 +1333,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>="Totales para : " &amp; Fields!companiaAbreviatura.Value</Value>
+                                  <Value>="Totales para : " &amp; Fields!monedaSimbolo.Value + " - " + Fields!companiaAbreviatura.Value</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
@@ -1715,10 +1674,6 @@
                   </SortExpressions>
                   <TablixMembers>
                     <TablixMember>
-                      <KeepWithGroup>After</KeepWithGroup>
-                      <RepeatOnNewPage>true</RepeatOnNewPage>
-                    </TablixMember>
-                    <TablixMember>
                       <Group Name="companiaNombre">
                         <GroupExpressions>
                           <GroupExpression>=Fields!companiaNombre.Value</GroupExpression>
@@ -1747,6 +1702,9 @@
                           </SortExpressions>
                           <TablixMembers>
                             <TablixMember>
+                              <Visibility>
+                                <Hidden>=Parameters!resumen.Value</Hidden>
+                              </Visibility>
                               <KeepWithGroup>After</KeepWithGroup>
                               <RepeatOnNewPage>true</RepeatOnNewPage>
                             </TablixMember>
@@ -1769,6 +1727,9 @@
                                   <Value>=Fields!cuota_fecha.Value</Value>
                                 </SortExpression>
                               </SortExpressions>
+                              <Visibility>
+                                <Hidden>=Parameters!resumen.Value</Hidden>
+                              </Visibility>
                             </TablixMember>
                             <TablixMember>
                               <KeepWithGroup>Before</KeepWithGroup>
@@ -1787,7 +1748,7 @@
             </TablixRowHierarchy>
             <DataSetName>DataSet1</DataSetName>
             <Top>0.04167in</Top>
-            <Height>2.25in</Height>
+            <Height>2in</Height>
             <Width>10.47167in</Width>
             <Style>
               <Border>
@@ -2038,6 +1999,11 @@
       <Nullable>true</Nullable>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="resumen">
+      <DataType>Boolean</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -2063,6 +2029,11 @@
           <ColumnIndex>3</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>mostrarColores</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>0</ColumnIndex>
+          <RowIndex>1</RowIndex>
+          <ParameterName>resumen</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
