--- a/scrwebm_net3/reports/consultas/montosPendientesCobroVencimientos/report-excel.rdlc
+++ b/scrwebm_net3/reports/consultas/montosPendientesCobroVencimientos/report-excel.rdlc
@@ -2214,6 +2214,11 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="resumen">
+      <DataType>Boolean</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -2249,6 +2254,11 @@
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>1</RowIndex>
           <ParameterName>fechaLeerHasta</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>2</ColumnIndex>
+          <RowIndex>1</RowIndex>
+          <ParameterName>resumen</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
