--- a/scrwebm_net3/reports/consultas/montosPendientesCobroVencimientos/report.rdlc
+++ b/scrwebm_net3/reports/consultas/montosPendientesCobroVencimientos/report.rdlc
@@ -1044,8 +1044,8 @@
                                 <TextRun>
                                   <Value>=Fields!monedaDescripcion.Value</Value>
                                   <Style>
-                                    <FontSize>9pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
+                                    <Color>MidnightBlue</Color>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -2881,6 +2881,9 @@
                           </SortExpressions>
                           <TablixMembers>
                             <TablixMember>
+                              <Visibility>
+                                <Hidden>=Parameters!resumen.Value</Hidden>
+                              </Visibility>
                               <KeepWithGroup>After</KeepWithGroup>
                               <RepeatOnNewPage>true</RepeatOnNewPage>
                             </TablixMember>
@@ -2900,6 +2903,9 @@
                                   <Value>=Fields!fecha.Value</Value>
                                 </SortExpression>
                               </SortExpressions>
+                              <Visibility>
+                                <Hidden>=Parameters!resumen.Value</Hidden>
+                              </Visibility>
                             </TablixMember>
                             <TablixMember>
                               <KeepWithGroup>Before</KeepWithGroup>
@@ -3214,6 +3220,11 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="resumen">
+      <DataType>Boolean</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -3249,6 +3260,11 @@
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>1</RowIndex>
           <ParameterName>fechaLeerHasta</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>2</ColumnIndex>
+          <RowIndex>1</RowIndex>
+          <ParameterName>resumen</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
