--- a/scrwebm_net3/reports/consultas/montosPendientesPagoVencimientos/report.rdlc
+++ b/scrwebm_net3/reports/consultas/montosPendientesPagoVencimientos/report.rdlc
@@ -2,20 +2,6 @@
 <Report xmlns="http://schemas.microsoft.com/sqlserver/reporting/2016/01/reportdefinition" xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner">
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="scrwebm_net3reportsconsultasmontosPendientes">
-      <ConnectionProperties>
-        <DataProvider>System.Data.DataSet</DataProvider>
-        <ConnectString>/* Local Connection */</ConnectString>
-      </ConnectionProperties>
-      <rd:DataSourceID>551efd98-ca6d-483a-b04d-87a3764b7316</rd:DataSourceID>
-    </DataSource>
-    <DataSource Name="scrwebm_net3reportsconsultasmontosPendientesCobroVencimientos">
-      <ConnectionProperties>
-        <DataProvider>System.Data.DataSet</DataProvider>
-        <ConnectString>/* Local Connection */</ConnectString>
-      </ConnectionProperties>
-      <rd:DataSourceID>c4af2339-7359-4d13-8764-c0ecced05c2e</rd:DataSourceID>
-    </DataSource>
     <DataSource Name="scrwebm_net3reportsconsultasmontosPendientesPagoVencimientos">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
@@ -23,11 +9,18 @@
       </ConnectionProperties>
       <rd:DataSourceID>6e6dad0a-e752-4bbf-af08-cce49800265a</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="scrwebm_net3reportsconsultasmontosPendientesPagoVencimientos1">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>8c5cc6fc-b6b7-4f62-866c-f5ccdb5f0979</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="DataSet1">
       <Query>
-        <DataSourceName>scrwebm_net3reportsconsultasmontosPendientesPagoVencimientos</DataSourceName>
+        <DataSourceName>scrwebm_net3reportsconsultasmontosPendientesPagoVencimientos1</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -47,12 +40,28 @@
           <DataField>companiaAbreviatura</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="aseguradoAbreviatura">
-          <DataField>aseguradoAbreviatura</DataField>
+        <Field Name="cedenteNombre">
+          <DataField>cedenteNombre</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="cedenteAbreviatura">
+          <DataField>cedenteAbreviatura</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="suscriptorAbreviatura">
           <DataField>suscriptorAbreviatura</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="aseguradoAbreviatura">
+          <DataField>aseguradoAbreviatura</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="codigo">
+          <DataField>codigo</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="referencia">
+          <DataField>referencia</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="origen">
@@ -87,14 +96,6 @@
           <DataField>diasVencidos</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
-        <Field Name="vencimiento">
-          <DataField>vencimiento</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="vencimientoAbreviatura">
-          <DataField>vencimientoAbreviatura</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
         <Field Name="montoCuota">
           <DataField>montoCuota</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
@@ -111,12 +112,20 @@
           <DataField>montoYaCobrado</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
+        <Field Name="vencimiento">
+          <DataField>vencimiento</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="vencimientoAbreviatura">
+          <DataField>vencimientoAbreviatura</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>scrwebm_net3.reports.consultas.montosPendientesPagoVencimientos</rd:DataSetName>
-        <rd:TableName>montoPendientePago_item</rd:TableName>
+        <rd:TableName>montoPendientePago_reportItem</rd:TableName>
         <rd:ObjectDataSourceSelectMethod>get_MontosPendientesPago</rd:ObjectDataSourceSelectMethod>
-        <rd:ObjectDataSourceType>scrwebm_net3.reports.consultas.montosPendientesPagoVencimientos.montoPendientePago_item, scrwebm_net3, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+        <rd:ObjectDataSourceType>scrwebm_net3.reports.consultas.montosPendientesPagoVencimientos.montoPendientePago_reportItem, scrwebm_net3, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
@@ -2576,6 +2585,9 @@
                           </SortExpressions>
                           <TablixMembers>
                             <TablixMember>
+                              <Visibility>
+                                <Hidden>=Parameters!resumen.Value</Hidden>
+                              </Visibility>
                               <KeepWithGroup>After</KeepWithGroup>
                               <RepeatOnNewPage>true</RepeatOnNewPage>
                             </TablixMember>
@@ -2595,6 +2607,9 @@
                                   <Value>=Fields!fecha.Value</Value>
                                 </SortExpression>
                               </SortExpressions>
+                              <Visibility>
+                                <Hidden>=Parameters!resumen.Value</Hidden>
+                              </Visibility>
                             </TablixMember>
                             <TablixMember>
                               <KeepWithGroup>Before</KeepWithGroup>
@@ -2909,6 +2924,11 @@
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="resumen">
+      <DataType>Boolean</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -2944,6 +2964,11 @@
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>1</RowIndex>
           <ParameterName>fechaLeerHasta</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>2</ColumnIndex>
+          <RowIndex>1</RowIndex>
+          <ParameterName>resumen</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
